# test-task-fullstack-solution

./: .gitignore  README.md  REVIEW.md  docker-compose.yml
.github/workflows/: test.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: items.py
backend/tests/: conftest.py  test_items.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ItemList.tsx
frontend/tests/: .gitkeep  ItemList.test.tsx
